--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
     url = https://github.com/wjakob/nanovg
 [submodule "ext/glfw"]
     path = ext/glfw
-    url = https://github.com/ceptontech/glfw
+    url = git@github.com:ceptontech/glfw.git
 [submodule "ext/glew"]
     path = ext/glew
     url = https://github.com/nigels-com/glew
