--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "ext/nanovg"]
     path = ext/nanovg
-    url = https://github.com/wjakob/nanovg
+    url = https://github.com/wjakob/nanovg.git
 [submodule "ext/glfw"]
     path = ext/glfw
-    url = git@github.com:ceptontech/glfw.git
+    url = https://github.com/ceptontech/glfw.git
 [submodule "ext/glew"]
     path = ext/glew
     url = https://github.com/nigels-com/glew
@@ -12,4 +12,4 @@
     url = https://github.com/libigl/eigen.git
 [submodule "ext/pybind"]
     path = ext/pybind11
-    url = https://github.com/pybind/pybind11
+    url = https://github.com/pybind/pybind11.git
