Make compatible with latest eigen.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -211,9 +211,9 @@ list(APPEND NANOGUI_EXTRA_INCS
   "${CMAKE_CURRENT_SOURCE_DIR}/ext/nanovg/src"
 )
 
-if (NOT NANOGUI_EIGEN_INCLUDE_DIR)
-  set(NANOGUI_EIGEN_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/ext/eigen")
-  list(APPEND NANOGUI_EXTRA_INCS "${NANOGUI_EIGEN_INCLUDE_DIR}")
+if (NOT EIGEN_FOUND)
+  set(EIGEN_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/ext/eigen")
+  list(APPEND NANOGUI_EXTRA_INCS "${EIGEN_INCLUDE_DIRS}")
 endif()
 
 if (${CMAKE_SYSTEM_NAME} MATCHES "BSD")
