--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,18 +111,18 @@ elseif (CMAKE_CXX_COMPILER_ID MATCHES "Clang" OR CMAKE_CXX_COMPILER_ID MATCHES "
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
 endif()
 
-if (CMAKE_CXX_COMPILER_ID MATCHES "^(GNU|Clang|Intel)$")
-  CHECK_CXX_COMPILER_FLAG("-std=c++14" HAS_CPP14_FLAG)
-  CHECK_CXX_COMPILER_FLAG("-std=c++11" HAS_CPP11_FLAG)
+# if (CMAKE_CXX_COMPILER_ID MATCHES "^(GNU|Clang|Intel)$")
+#   CHECK_CXX_COMPILER_FLAG("-std=c++14" HAS_CPP14_FLAG)
+#   CHECK_CXX_COMPILER_FLAG("-std=c++11" HAS_CPP11_FLAG)
 
-  if (HAS_CPP14_FLAG)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
-  elseif (HAS_CPP11_FLAG)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-  else()
-    message(FATAL_ERROR "Unsupported compiler -- pybind11 requires C++11 support!")
-  endif()
-endif()
+#   if (HAS_CPP14_FLAG)
+#     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
+#   elseif (HAS_CPP11_FLAG)
+#     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+#   else()
+#     message(FATAL_ERROR "Unsupported compiler -- pybind11 requires C++11 support!")
+#   endif()
+# endif()
 
 # Various optimizations for shared library release builds
 if (NANOGUI_BUILD_SHARED)
